--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,34 @@
 <head>
   <title><%= title %></title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <% include partials/javascript %>
+  <% include partials/css %>
+
 </head>
 
 <body>
   <h1><%= title %></h1>
   <p>Welcome to <%= title %> - Quản lý hội nghị - nhóm 6</p>
+  <button type="button" class="btn btn-primary">Primary</button>
+
+
+  <form id="form-contact" method="post" action="/user">
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+    </div>
+    <div class="form-group form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+
 </body>
 
 </html>
