--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-  <title><%= title %></title>
-
-  <% include partials/head %>
+  <% include partials/head =title %>
 </head>
 
 <body>
