--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,12 +2,16 @@
 <html>
 
 <head>
-    <% include partials/head =title %>
-    <% include ajax/loginAjax %>
+    <% include partials/head=title %>
+        <% include ajax/loginAjax %>
+            <link />
+            <script></script>
 </head>
 
 <body>
-    <h1><%= title %></h1>
+    <h1>
+        <%= title %>
+    </h1>
     <p>login form</p>
 
 
