--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,7 @@
   <script src="/javascripts/vendors/jquery.ajaxchimp.min.js"></script>
   <script src="/javascripts/vendors/mail-script.js"></script> -->
   <!-- <script src="../public/javascripts/js/main.js"></script> -->
+  <!-- <script src="../public/javascripts/js/main.js"></script> -->
 </body>
 
 </html>
