--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,63 +1,38 @@
   <!--================ Start footer Area  =================-->	
   <footer class="footer">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <div class="footer-area">
         <div class="container">
             <div class="row section_gap">
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-md-4 col-sm-4">
                     <div class="single-footer-widget tp_widgets">
-                        <h4 class="footer_title large_title">Our Mission</h4>
-                        <p>
-                            So seed seed green that winged cattle in. Gathering thing made fly you're no 
-                            divided deep moved us lan Gathering thing us land years living.
-                        </p>
-                        <p>
-                            So seed seed green that winged cattle in. Gathering thing made fly you're no divided deep moved 
-                        </p>
+                        <h4 class="footer_title large_title">Hotline hỗ trợ</h4>
+                        <p>Hồ Chí Minh: Thứ 2 -Thứ 6 (8:00-17:00)</p>
+                        <b>1900.7777</b>
+                        <p>Hà Nội: Thứ 2 -Thứ 6 (8:00-17:00)</p>
+                        <b>1900.9999</b>
+                        <h4 class="footer_title">Email hỗ trợ</h4>
+                        <p>supportConferenceK16@gmail.com</p>
                     </div>
                 </div>
-                <div class="offset-lg-1 col-lg-2 col-md-6 col-sm-6">
+                <div class="col-md-4 col-sm-4">
                     <div class="single-footer-widget tp_widgets">
-                        <h4 class="footer_title">Quick Links</h4>
-                        <ul class="list">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Shop</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Product</a></li>
-                            <li><a href="#">Brand</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
+                        <h4 class="footer_title">Hướng dẫn đăng ký hội nghị</h4>
+                        <p>Chỉ vài thao tác đơn giản</p>
+                        <h4 class="footer_title">Chúng tôi giúp được gì cho bạn?</h4>
+                        <p>Dễ dàng-Tiện lợi-Bảo mật cao</p>
+                        <h4 class="footer_title">Trung tâm hỗ trợ</h4>
+                        <p>TP. Hồ Chí Minh: 227 Nguyễn Văn Cừ, Phường 4, Quận 5</p>
                     </div>
                 </div>
 
-                <div class="offset-lg-1 col-lg-3 col-md-6 col-sm-6">
+                <div class="col-md-4 col-sm-4">
                     <div class="single-footer-widget tp_widgets">
-                        <h4 class="footer_title">Contact Us</h4>
-                        <div class="ml-40">
-                            <p class="sm-head">
-                                <span class="fa fa-location-arrow"></span>
-                                Head Office
-                            </p>
-                            <p>123, Main Street, Your City</p>
-
-                            <p class="sm-head">
-                                <span class="fa fa-phone"></span>
-                                Phone Number
-                            </p>
-                            <p>
-                                +123 456 7890 <br>
-                                +123 456 7890
-                            </p>
-
-                            <p class="sm-head">
-                                <span class="fa fa-envelope"></span>
-                                Email
-                            </p>
-                            <p>
-                                free@infoexample.com <br>
-                                www.infoexample.com
-                            </p>
+                        <h4 class="footer_title">FAQ</h4>
+                            <p >Câu hỏi thường gặp</p>
+                            <h4 class="footer_title">Đăng kí nhận email</h4>
+                            <input value="Email của bạn" class ="footer_ebox" >
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
