--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,27 +5,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hội nghị</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
 </head>
 
 <body>
   {{> nav}}
+  <div class="w-100 h-25">
+    <section class="jumbotron text-center">
+      <div class="cover-photo text-danger bg-light" href="#" >
+        <img class="card-img-top" src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2020/12/16/33F35D.jpg"
+          alt="">
+        <div class="card-body">
+          <h1 class="jumbotron-heading ">TEDxFPTUniversityHCMC</h1>
+          <p class="lead text-muted">FPT University Ho Chi Minh
+            Đường D1, Lô E2a-7 Khu Công Nghệ Cao, Long Thạnh Mỹ, Quận 9, Thành phố Hồ Chí Minh, Quận 9, Thành Phố Hồ Chí
+            Minh.</p>
+          <p>
+            <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+            <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
+          </p>
+        </div>
+      </div>
+
+    </section>
+  </div>
+  {{> filter_sort}}
+
   {{{body}}}
 
   {{!-- <div class="container-fluid mt-4">
     <div class="row">
       <div class="col-sm-9">
-      
+
       </div>
     </div>
   </div> --}}
 
- 
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
