chinh sua thanh nav

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,9 +13,9 @@
 
 <body>
   {{> nav}}
-  <div class="w-100 h-25">
+  <div class="container-fluid" type="width: 100%;height: 100%;">
     <section class="jumbotron text-center">
-      <div class="cover-photo text-danger bg-light" href="#" >
+      <div class="cover-photo text-danger bg-light " href="#">
         <img class="card-img-top" src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2020/12/16/33F35D.jpg"
           alt="">
         <div class="card-body">
