--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,9 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    width: 100vh;
 }
 
 a {
-  color: #00b7ff;
+    color: #00b7ff;
 }
