new view thongtinuser

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -31,7 +31,7 @@
                         <h4 class="footer_title">FAQ</h4>
                             <p >Câu hỏi thường gặp</p>
                             <h4 class="footer_title">Đăng kí nhận email</h4>
-                            <input value="Email của bạn" class ="footer_ebox" >
+                            <input placeholder="Email của bạn" class ="footer_ebox" >
                         </div>
                 </div>
             </div>
