--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,9 +1,41 @@
 body {
     padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    width: 100vh;
 }
 
 a {
     color: #00b7ff;
+}
+
+p {
+    color: #999999;
+    font-size: 13px;
+    font-family: Merriweather Sans;
+}
+
+.footer {
+    padding-top: 20px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: #282F3F;
+}
+
+.footer_title {
+    color: #999999;
+    font-size: 15px;
+    font-family: Merriweather Sans;
+    font-weight: bold;
+}
+
+b {
+    color: #ACD25A;
+    font-size: 20px;
+    font-family: Merriweather Sans;
+}
+
+.footer_ebox {
+    color: #999999;
+    font-size: 13px;
+    font-family: Merriweather Sans;
 }
