--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -43,7 +43,7 @@
       </div>
     </div>
   </div> --}}
-
+  {{> footer}}
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
