tao file view err 404 va 500, chinh sua lai trang home

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,5 @@
 <!--================ Start footer Area  =================-->
-<footer class="footer navbar-fixed-bottom navbar" >
+<footer class="footer container-fluid navbar-fixed-bottom navbar " >
   <link rel="stylesheet" href="/public/stylesheets/style.css" />
 
   <div class="footer-area d-flex">
