--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg shadow-lg mb-4 navbar-dark fixed-top d-flex" style="background-color: #189EFF;">
   <a class="navbar-brand" href="./">
-    <img src="./public/images/logo.svg" class="card-img-top" alt="logo" title="logo" style="width:60px;">
+    <img src="./public/images/logo.svg" class="card-img-top" alt="logo" title="logo" style="width:70px;">
     {{!-- <img src="/public/image/conference-k16.png" alt="logo" style="width:40px;"> --}}
   </a>
 
@@ -24,7 +24,7 @@
           Nguyen Thi Ngoc Nhu
         </a>
         <div class="dropdown-menu flex-fill" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="./InforUser">
+          <a class="dropdown-item" href="./user/inforuser">
             <i class="fa fa-user" aria-hidden="true"></i>
             Xem và chỉnh sủa thông tin cá nhân
           </a>
