--- a/views/500.hbs
+++ b/views/500.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>404</title>
+  <title>500</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
@@ -29,9 +29,9 @@
         <div class="card shadow-lg w-50 mx-auto" style="border-radius: 40px;">
           <div class="card-body text-center">
             <h1 class="card-title">Ooops !</h1>
-            <h2 class="text-danger">404 Not Found</h2>
+            <h2 class="text-danger">500 Internal Server Error</h2>
             <p class="card-text">
-              Sorry, an error has occurred. Requested page not foud.
+              Sorry, an error has occurred.
             </p>
             <div>
               <a class="btn btn-outline-primary" href="/" role="button">
