Loading view inforUser

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,5 +34,5 @@ b{
 .footer_ebox{
   color: #999999;
   font-size: 13px;
-  font-family: Merriweather Sans;
+  font-family: "Merriweather Sans";
 }
