fix loi giao dien

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,51 +1,84 @@
 <!--================ Start footer Area  =================-->
-<footer class="footer container-fluid navbar-fixed-bottom navbar " >
-  <link rel="stylesheet" href="/public/stylesheets/style.css" />
 
+<style>
+  .footer p,
+  .footer_title,
+  .footer_ebox {
+    color: #999999;
+    font-size: 13px;
+  }
+
+  .footer_title {
+    font-size: 15px;
+    font-weight: bold;
+  }
+
+  .footer a {
+    color: #00b7ff;
+  }
+
+  .footer {
+    flex: auto;
+    background-color: #282F3F;
+    flex-direction: column;
+  }
+
+  .footer-area {
+    width: 100%;
+    flex: auto;
+    justify-content: space-around;
+  }
+
+  .footer b {
+    color: #ACD25A;
+    font-size: 20px;
+  }
+</style>
+<footer class="footer container-fluid navbar-fixed-bottom navbar ">
   <div class="footer-area d-flex">
 
-     
-        <div class="col-md-4 col-sm-4">
-          <div class="single-footer-widget tp_widgets">
-            <h4 class="footer_title large_title">Hotline hỗ trợ</h4>
-            <p>Hồ Chí Minh: Thứ 2 -Thứ 6 (8:00-17:00)</p>
-            <b>1900.7777</b>
-            <p>Hà Nội: Thứ 2 -Thứ 6 (8:00-17:00)</p>
-            <b>1900.9999</b>
-            <h4 class="footer_title">Email hỗ trợ</h4>
-            <p>supportConferenceK16@gmail.com</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-4">
-          <div class="single-footer-widget tp_widgets">
-            <h4 class="footer_title">Hướng dẫn đăng ký hội nghị</h4>
-            <p>Chỉ vài thao tác đơn giản</p>
-            <h4 class="footer_title">Chúng tôi giúp được gì cho bạn?</h4>
-            <p>Dễ dàng-Tiện lợi-Bảo mật cao</p>
-            <h4 class="footer_title">Trung tâm hỗ trợ</h4>
-            <p>TP. Hồ Chí Minh: 227 Nguyễn Văn Cừ, Phường 4, Quận 5</p>
-          </div>
-        </div>
 
-        <div class="col-md-4 col-sm-4">
-          <div class="single-footer-widget tp_widgets">
-            <h4 class="footer_title">FAQ</h4>
-            <p>Câu hỏi thường gặp</p>
-            <h4 class="footer_title">Đăng kí nhận email</h4>
-            <input placeholder="Email của bạn" class="footer_ebox">
-          </div>
-        </div>
-    
- 
+    <div class="col-md-4 col-sm-4">
+      <div class="single-footer-widget tp_widgets">
+        <h4 class="footer_title large_title">Hotline hỗ trợ</h4>
+        <p>Hồ Chí Minh: Thứ 2 -Thứ 6 (8:00-17:00)</p>
+        <b>1900.7777</b>
+        <p>Hà Nội: Thứ 2 -Thứ 6 (8:00-17:00)</p>
+        <b>1900.9999</b>
+        <h4 class="footer_title">Email hỗ trợ</h4>
+        <p>supportConferenceK16@gmail.com</p>
+      </div>
+    </div>
+    <div class="col-md-4 col-sm-4">
+      <div class="single-footer-widget tp_widgets">
+        <h4 class="footer_title">Hướng dẫn đăng ký hội nghị</h4>
+        <p>Chỉ vài thao tác đơn giản</p>
+        <h4 class="footer_title">Chúng tôi giúp được gì cho bạn?</h4>
+        <p>Dễ dàng-Tiện lợi-Bảo mật cao</p>
+        <h4 class="footer_title">Trung tâm hỗ trợ</h4>
+        <p>TP. Hồ Chí Minh: 227 Nguyễn Văn Cừ, Phường 4, Quận 5</p>
+      </div>
+    </div>
+
+    <div class="col-md-4 col-sm-4">
+      <div class="single-footer-widget tp_widgets">
+        <h4 class="footer_title">FAQ</h4>
+        <p>Câu hỏi thường gặp</p>
+        <h4 class="footer_title">Đăng kí nhận email</h4>
+        <input placeholder="Email của bạn" class="footer_ebox">
+      </div>
+    </div>
+
+
   </div>
 
-  <div class="footer-bottom">    
-        <p class="col-lg-12 footer-text text-center">
-          Copyright &copy;
-          <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-          made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-            target="_blank">Colorlib</a>
-        </p>       
+  <div class="footer-bottom">
+    <p class="col-lg-12 footer-text text-center">
+      Copyright &copy;
+      <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
+      made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+        target="_blank">Colorlib</a>
+    </p>
   </div>
 </footer>
 <!--================ End footer Area  =================-->
