--- a/views/partials/carousel.hbs
+++ b/views/partials/carousel.hbs
@@ -1,62 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+
+<body>
 
 
+  <div class="container-fluid">
+    <h2>Carousel Example</h2>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
 
-<div class="container-fluid">
-  <h2>Carousel Example</h2>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-
-      <div class="item active">
-        <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2020/11/22/81992C.jpg"
-          alt="Khóa học Advanced Power Query" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>Khóa học Advanced Power Query</h3>
-          <p>Trung tâm tư vấn và đào tạo UniTrain
-            Lầu 4, tòa nhà Thiên Sơn, 5 Nguyễn Gia Thiều, phường 6, Quận 3, Thành Phố Hồ Chí Minh
-          </p>
+        <div class="item active">
+          <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2020/11/22/81992C.jpg"
+            alt="Khóa học Advanced Power Query" style="width:100%;">
+          <div class="carousel-caption">
+            <h3>Khóa học Advanced Power Query</h3>
+            <p>Trung tâm tư vấn và đào tạo UniTrain
+              Lầu 4, tòa nhà Thiên Sơn, 5 Nguyễn Gia Thiều, phường 6, Quận 3, Thành Phố Hồ Chí Minh
+            </p>
+          </div>
         </div>
+
+        <div class="item">
+          <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2021/01/04/FB5CFC.jpg"
+            alt="Digital Marketing F&B Workshop" style="width:100%;">
+          <div class="carousel-caption">
+            <h3>Digital Marketing F&B Workshop</h3>
+            <p>Spiced Co-working
+              15/1 Duong so 10, Binh An Ward, Quận 2, Thành Phố Hồ Chí Minh
+            </p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2020/11/22/61014C.jpg"
+            alt="Khóa học Ứng dụng SQL trong xử lý dữ liệu" style="width:100%;">
+          <div class="carousel-caption">
+            <h3>Khóa học Ứng dụng SQL trong xử lý dữ liệu</h3>
+            <p>Trung tâm tư vấn và đào tạo UniTrain
+              Lầu 4, tòa nhà Thiên Sơn, 5 Nguyễn Gia Thiều, phường 6, Quận 3, Thành Phố Hồ Chí Minh
+            </p>
+          </div>
+        </div>
+
       </div>
 
-      <div class="item">
-        <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2021/01/04/FB5CFC.jpg"
-          alt="Digital Marketing F&B Workshop" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>Digital Marketing F&B Workshop</h3>
-          <p>Spiced Co-working
-            15/1 Duong so 10, Binh An Ward, Quận 2, Thành Phố Hồ Chí Minh
-          </p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2020/11/22/61014C.jpg"
-          alt="Khóa học Ứng dụng SQL trong xử lý dữ liệu" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>Khóa học Ứng dụng SQL trong xử lý dữ liệu</h3>
-          <p>Trung tâm tư vấn và đào tạo UniTrain
-            Lầu 4, tòa nhà Thiên Sơn, 5 Nguyễn Gia Thiều, phường 6, Quận 3, Thành Phố Hồ Chí Minh
-          </p>
-        </div>
-      </div>
-
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
-</div>
+
+</body>
+
+</html>
