--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,24 +13,14 @@
 </head>
 
 <body>
-  {{!-- {{> nav}} --}}
 
-  <div class="container-fluid mt-4">
-    <div class="row">
-      <div class="col-lg">
-        {{{body}}}
-      </div>
-    </div>
-  </div>
+    
+  {{> nav}}
+
+  {{{body}}}
 
   {{> footer}}
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
 
 </body>
 
