--- a/views/partials/carousel.hbs
+++ b/views/partials/carousel.hbs
@@ -1,19 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-
-<body>
-
-
-  <div class="container-fluid">
+  <ssection class="container-fluid">
     <h2>Carousel Example</h2>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
@@ -71,8 +57,5 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-  </div>
+  </section>
 
-</body>
-
-</html>
