--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,9 +1,6 @@
 <!--================ Start footer Area  =================-->
 <style>
-  body {
-    font: 17px "Lucida Grande", Helvetica, Arial, sans-serif;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+
 
 .footer p,
 .footer_title,
@@ -42,42 +39,8 @@
 
 </style>
 
-<footer class="footer container-fluid navbar-fixed-bottom navbar " >
 
-<style>
-  .footer p,
-  .footer_title,
-  .footer_ebox {
-    color: #999999;
-    font-size: 13px;
-  }
 
-  .footer_title {
-    font-size: 15px;
-    font-weight: bold;
-  }
-
-  .footer a {
-    color: #00b7ff;
-  }
-
-  .footer {
-    flex: auto;
-    background-color: #282F3F;
-    flex-direction: column;
-  }
-
-  .footer-area {
-    width: 100%;
-    flex: auto;
-    justify-content: space-around;
-  }
-
-  .footer b {
-    color: #ACD25A;
-    font-size: 20px;
-  }
-</style>
 <footer class="footer container-fluid navbar-fixed-bottom navbar ">
   <div class="footer-area d-flex">
 
@@ -109,7 +72,7 @@
         <h4 class="footer_title">FAQ</h4>
         <p>Câu hỏi thường gặp</p>
         <h4 class="footer_title">Đăng kí nhận email</h4>
-        <input placeholder="Email của bạn" class="footer_ebox">
+        <input type="email" placeholder="Email của bạn" class="footer_ebox">
       </div>
     </div>
 
