--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg shadow-lg mb-4 navbar-dark fixed-top d-flex" style="background-color: #189EFF;">
+<nav class="navbar" style="background-color: #189EFF;">
   <a class="navbar-brand" href="./">
     <img src="./public/images/logo.svg" class="card-img-top" alt="logo" title="logo" style="width:70px;">
   </a>
