--- a/views/viewAdmin/newConference.hbs
+++ b/views/viewAdmin/newConference.hbs
@@ -1,67 +1,75 @@
-<div class="container">
-    <form class="row g-3 needs-validation" novalidate>
-        <div class="row-md-4">
-            <label for="validationCustom01" class="form-label">First name</label>
-            <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-            <div class="valid-feedback">
-                Looks good!
+<div class="container" style="margin-bottom: 20px">
+    <form class="needs-validation" novalidate>
+        <h5 style="text-align: center">Thông tin hội nghị</h5>
+        <div class="row" style="margin-top: 20px">
+            <label for="validationCustom01" class="col-md-2 form-label">Thông tin hội nghị</label>
+            <input type="text" class="col form-control" id="nameConfer" required>
+             <div class="invalid-feedback">
+                Không được bỏ trống!
             </div>
         </div>
-        <div class="row-md-4">
-            <label for="validationCustom02" class="form-label">Last name</label>
-            <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-            <div class="valid-feedback">
-                Looks good!
+
+        <div class="row" style="margin-top: 20px">
+            <label for="validationCustom01" class="col-md-2 form-label">Mô tả ngắn gọn</label>
+            <input type="text" class="col form-control" id="decriptSort" required>
+             <div class="invalid-feedback">
+                Không được bỏ trống!
             </div>
         </div>
-        <div class="row-md-4">
-            <label for="validationCustomUsername" class="form-label">Username</label>
-            <div class="input-group has-validation">
-                <span class="input-group-text" id="inputGroupPrepend">@</span>
-                <input type="text" class="form-control" id="validationCustomUsername"
-                    aria-describedby="inputGroupPrepend" required>
-                <div class="invalid-feedback">
-                    Please choose a username.
-                </div>
+
+        <div class="row" style="margin-top: 20px">
+            <label for="validationCustom01" class="col-md-2 form-label">Mô tả chi tiết</label>
+            <input type="text" class="col form-control" id="decriptLong" required>
+             <div class="invalid-feedback">
+                Không được bỏ trống!
             </div>
         </div>
-        <div class="col-md-6">
-            <label for="validationCustom03" class="form-label">City</label>
-            <input type="text" class="form-control" id="validationCustom03" required>
+
+        <div class="row" style="margin-top: 20px">
+            <label for="validationCustom01" class="col-md-2 form-label">Thời gian BĐ</label>
+            <input type="date" class="col form-control" id="dateBĐ" required>
+             <div class="invalid-feedback">
+                Không được bỏ trống!
+            </div>
+        </div>
+
+        <div class="row" style="margin-top: 20px">
+            <label for="validationCustom01" class="col-md-2 form-label">Thời gian KT</label>
+            <input type="date" class="col form-control" id="dateKT" required>
             <div class="invalid-feedback">
-                Please provide a valid city.
+                Không được bỏ trống!
             </div>
         </div>
-        <div class="col-md-3">
-            <label for="validationCustom04" class="form-label">State</label>
-            <select class="form-select" id="validationCustom04" required>
-                <option selected disabled value="">Choose...</option>
-                <option>...</option>
-            </select>
-            <div class="invalid-feedback">
-                Please select a valid state.
+
+        <div class="row" style="margin-top: 20px">
+            <label for="validationCustom01" class="col-md-2 form-label">Địa điểm</label>
+            <input type="text" class="col form-control" id="location" required>
+             <div class="invalid-feedback">
+                Không được bỏ trống!
             </div>
         </div>
-        <div class="col-md-3">
-            <label for="validationCustom05" class="form-label">Zip</label>
-            <input type="text" class="form-control" id="validationCustom05" required>
-            <div class="invalid-feedback">
-                Please provide a valid zip.
+
+        <div class="row" style="margin-top: 20px">
+            <label for="validationCustom01" class="col-md-2 form-label">Số lượng giới hạn</label>
+            <input type="text" class="col form-control" id="sl" required>
+             <div class="invalid-feedback">
+                Không được bỏ trống!
             </div>
         </div>
-        <div class="col-12">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                <label class="form-check-label" for="invalidCheck">
-                    Agree to terms and conditions
-                </label>
-                <div class="invalid-feedback">
-                    You must agree before submitting.
-                </div>
+
+        <div class="row" style="margin-top: 20px">
+            <label for="validationCustom01" class="col-md-2 form-label">Hình ảnh</label>
+            <input type="file" class="col form-control" id="picture" required>
+             <div class="invalid-feedback">
+                Không được bỏ trống!
             </div>
         </div>
-        <div class="col-12">
-            <button class="btn btn-primary" type="submit">Submit form</button>
+
+
+
+        <div class="col" style="margin-top: 20px"><center>
+            <button class="btn btn-primary" style="background-color: #ACD25A;">Thêm hội nghị</button>
+            </center>
         </div>
     </form>
 </div>
