loading nav menu admin

--- a/views/partials/carousel.hbs
+++ b/views/partials/carousel.hbs
@@ -1,5 +1,5 @@
 
-  <ssection class="container-fluid">
+  <section class="container-fluid">
     <h2>Carousel Example</h2>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
