--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,17 +7,22 @@
   <title>Online Shopping WebApp</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
 
   <div class="main">
 
-   
+
     <div class="album py-5 bg-light">
       <div class="container">
 
         <div class="row">
+          <script>
+
+          </script>
+
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
               <img class="card-img-top"
@@ -209,6 +214,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+  <script src="../public/javascripts/ajax/conferenceAjax.js"></script>
 </body>
 
 </html>
