--- a/views/partials/navmenu.hbs
+++ b/views/partials/navmenu.hbs
@@ -1,11 +1,11 @@
-<ul class="nav flex-column">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
+<ul class="nav flex-column" style="background: #E8EDFF; text-align: center;  height: 100%">
+  <li class="nav-item" style="border: solidy">
+    <a class="nav-link active" aria-current="page" href="#"><img src="/public/images/iconqlhn.png" style="margin-right: 5px">Quản lý hội nghị</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="#"><img src="/public/images/iconqlu.png" style="margin-right: 5px">Quản lý User</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="#"><img src="/public/images/icontghn.png" style="margin-right: 5px">Chấp nhận yêu cầu tham gia của User</a>
   </li>
 </ul>
