--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg shadow-lg navbar-dark fixed-top" style="background-color: #189EFF;">
   <div class="container-fluid">
     <a class="navbar-brand" href="./">
-      <img src="./public/images/logo.svg" class="card-img-top" alt="logo" title="logo" style="width:70px;">
+      <img src="http://localhost:3000/public/images/logo.svg" class="card-img-top" alt="logo" title="logo"
+        style="width:70px;">
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -10,7 +11,7 @@
     </button>
 
     <div class="row collapse navbar-collapse" id="navbarSupportedContent">
-    
+
       <form class=" col-sm-6 d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-light" type="submit">Search</button>
@@ -19,8 +20,8 @@
       <ul class="col-sm-6 d-flex justify-content-end navbar-nav mb-2 mb-lg-0">
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa fa-user-circle-o" aria-hidden="true"></i>
             Nguyễn Thị Ngọc Như
           </a>
@@ -66,7 +67,7 @@
             Thoát
           </a>
         </li>
-        
+
       </ul>
     </div>
   </div>
