them view forgetpassword

--- a/views/vwLogin/changepassword.hbs
+++ b/views/vwLogin/changepassword.hbs
@@ -31,18 +31,26 @@
 
         <div class="card shadow-lg mx-auto col-md-4 align-self-md-center" style="border-radius: 40px;">
           <div class="card-body text-center">
-            <h1 class="card-title font-weight-bold" style="color: #666666;">Forget password</h1>
+            <h1 class="card-title font-weight-bold" style="color: #666666;">Change password</h1>
 
             <form class="mb-3">
+
               <div class="form-floating mb-3">
-                <input type="email" class="form-control rounded-pill" id="floatingInput"
-                  placeholder="Email example:name@example.com">
-                <label for="floatingInput">Email</label>
+                <input type="password" class="form-control rounded-pill" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Password</label>
               </div>
+
+              <div class="form-floating mb-3">
+                <input type="password" class="form-control rounded-pill" id="floatingPassword"
+                  placeholder="Confirm password">
+                <label for="floatingPassword">Confirm password</label>
+              </div>
+
+
 
               <button type="submit" class="btn btn-success rounded-pill w-100"
                 style="height: 55px; background-color: #5AAC44; font-size: larger;">
-                Confirm Email
+                Change password
               </button>
 
 
