--- a/views/vwLogin/login.hbs
+++ b/views/vwLogin/login.hbs
@@ -57,7 +57,7 @@
             </form>
 
             <div class="d-flex justify-content-between">
-              <a class=" " href="/" role="button">
+              <a class=" " href="/forgetpassword" role="button">
                 Forget password
               </a>
 
