--- a/views/vwLogin/signup.hbs
+++ b/views/vwLogin/signup.hbs
@@ -35,32 +35,29 @@
 
             <form class="mb-3">
               <div class="form-floating mb-3">
-                <input type="email" class="form-control rounded-pill" id="floatingInput"
-                  placeholder="Full name">
+                <input type="email" class="form-control rounded-pill" id="floatingInput" placeholder="Full name">
                 <label for="floatingInput">Full name</label>
               </div>
               <div class="form-floating mb-3">
                 <input type="email" class="form-control rounded-pill" id="floatingInput"
-                  placeholder="Phone or email example:name@example.com">
-                <label for="floatingInput">Email or phone</label>
+                  placeholder="Email example:name@example.com">
+                <label for="floatingInput">Email</label>
               </div>
               <div class="form-floating mb-3">
                 <input type="email" class="form-control rounded-pill" id="floatingInput"
-                  placeholder="Username">
+                  placeholder="Username, phone or email example:name@example.com">
                 <label for="floatingInput">User name</label>
               </div>
               <div class="form-floating mb-3">
                 <input type="password" class="form-control rounded-pill" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label>
               </div>
-              <div class="form-floating mb-2">
-                <input type="password" class="form-control rounded-pill" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+              <div class="form-floating mb-3">
+                <input type="password" class="form-control rounded-pill" id="floatingPassword"
+                  placeholder="Confirm password">
+                <label for="floatingPassword">Confirm password</label>
               </div>
-              <div class="form-check mb-2 d-flex mt-lg-1">
-                <input type="checkbox" class="form-check-input rounded-pill" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-              </div>
+
 
               <button type="submit" class="btn btn-success rounded-pill w-100"
                 style="height: 55px; background-color: #5AAC44; font-size: larger;">
@@ -72,6 +69,7 @@
 
             <div class="d-flex justify-content-between">
               <a class=" " href="/" role="button">
+                <i class="fa fa-home" aria-hidden="true"></i>
                 Home
               </a>
 
