--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,7 +14,10 @@
 
 <body>
 
-  {{> navguest}}
+  <div id="navHomePage">
+
+  </div>
+
 
 
   <div style=" margin-top: 85px;">
@@ -35,6 +38,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
+
+  <script>
+    let html = document.getElementById("navHomePage");
+    let id = localStorage.getItem("id");
+    let str = id ? `<div>{{> nav}}</div>` : `<div>{{> navguest}}</div>`;
+    html.innerHTML = str;
+  </script>
 
 </body>
 
