update id cac view trong  vwAuth

--- a/views/bs4copy.hbs
+++ b/views/bs4copy.hbs
@@ -60,12 +60,6 @@
   <link href="https://static.tkbcdn.com/dist/tkbvn/css/event/event-detail-v21-min.css?v=4259" rel="stylesheet" />
 
 
-  <!-- Custom CSS -->
-  <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -319,7 +313,7 @@
 
 
         </section>
-
+        ///giới thiệu chi tiết tóm tắt nội dung của hội nghị
         <section class="mainContainer">
           <div class="container left-bl pl-pr-0">
             <div class="col-sm-12 col-md-8 pl-pr-0 specialBox">
@@ -372,7 +366,6 @@
               </section>
               //nhà tổ chức
               <section class="organizer" id="organizer">
-
                 <div class="row margin-bottom-0">
                   <div class="col-sm-12 pl-pr-0">
                     <h3 class="title">Nh&#224; tổ chức</h3>
@@ -398,27 +391,14 @@
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="clearfix"></div>
-
-                    <!-- <p class="read-more arrow--sec visible-xs"><a href="javascript:void(0)" class="btn" btntype="organizer"><span class="arrow ello-down-open grey-bright-color"></span></a></p> -->
-                    <div class="clearfix"></div>
+                    </div>              
                   </div>
                 </div>
-                <!-- <div class="container-fluid relate-post parallax">
-    <div class="button-gr">
-        <h2>Kh&#225;m ph&#225; nhiều sự kiện kh&#225;c</h2>
-        <a class="btn btn-default font-bold" href="/past-events" target="blank">Xem sự kiện kh&#225;c</a>
-    </div>
-</div> -->
-
-                <!--/popup-->
-
-
-
-
-
               </section>
+
+
+
+
 
               <div class="breakpoint"></div>
             </div>
