--- a/views/vwAuth/changepassword.hbs
+++ b/views/vwAuth/changepassword.hbs
@@ -36,14 +36,14 @@
             <form class="mb-3">
 
               <div class="form-floating mb-3">
-                <input type="password" class="form-control rounded-pill" id="floatingPassword" placeholder="Mật khẩu">
-                <label for="floatingPassword">Mật khẩu</label>
+                <input type="password" class="form-control rounded-pill" id="txtPassword" placeholder="Mật khẩu">
+                <label for="txtPassword">Mật khẩu</label>
               </div>
 
               <div class="form-floating mb-3">
-                <input type="password" class="form-control rounded-pill" id="floatingPassword"
+                <input type="password" class="form-control rounded-pill" id="txtConfirmPassword"
                   placeholder="Nhập lại mật khẩu">
-                <label for="floatingPassword">Nhập lại mật khẩu</label>
+                <label for="txtConfirmPassword">Nhập lại mật khẩu</label>
               </div>
 
 
