--- a/views/vwAuth/forgetpassword.hbs
+++ b/views/vwAuth/forgetpassword.hbs
@@ -35,9 +35,9 @@
 
             <form class="mb-3">
               <div class="form-floating mb-3">
-                <input type="email" class="form-control rounded-pill" id="floatingInput"
+                <input type="email" class="form-control rounded-pill" id="txtEmail"
                   placeholder="Email ví dụ:name@example.com">
-                <label for="floatingInput">Email</label>
+                <label for="txtEmail">Email</label>
               </div>
 
               <button type="submit" class="btn btn-success rounded-pill w-100"
