--- a/views/vwAuth/signup.hbs
+++ b/views/vwAuth/signup.hbs
@@ -35,27 +35,27 @@
 
             <form class="mb-3">
               <div class="form-floating mb-3">
-                <input type="text" name="name" class="form-control rounded-pill" id="floatingInput" placeholder="Họ và tên">
-                <label for="floatingInput">Họ và tên</label>
+                <input type="text" name="name" class="form-control rounded-pill" id="txtName" placeholder="Họ và tên">
+                <label for="txtName">Họ và tên</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="email" name="email" class="form-control rounded-pill" id="floatingInput"
+                <input type="email" name="email" class="form-control rounded-pill" id="txtEmail"
                   placeholder="Email ví dụ:name@example.com">
-                <label for="floatingInput">Email</label>
+                <label for="txtEmail">Email</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="text" name="user_name" class="form-control rounded-pill" id="floatingInput"
+                <input type="text" name="user_name" class="form-control rounded-pill" id="txtUsername"
                   placeholder="Tên đăng nhập, điện thoại hoặc email ví dụ:name@example.com">
-                <label for="floatingInput">Tên đăng nhập</label>
+                <label for="txtUsername">Tên đăng nhập</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="password" name="password" class="form-control rounded-pill" id="floatingPassword" placeholder="Mật khẩu">
-                <label for="floatingPassword">Mật khẩu</label>
+                <input type="password" name="password" class="form-control rounded-pill" id="txtPassword" placeholder="Mật khẩu">
+                <label for="txtPassword">Mật khẩu</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="password" class="form-control rounded-pill" id="floatingPassword"
+                <input type="password" class="form-control rounded-pill" id="txtConfirmPassword"
                   placeholder="Nhập lại mật khẩu">
-                <label for="floatingPassword">Nhập lại mật khẩu</label>
+                <label for="txtConfirmPassword">Nhập lại mật khẩu</label>
               </div>
 
               <button type="submit" class="btn btn-success rounded-pill w-100"
