--- a/views/vwAuth/login.hbs
+++ b/views/vwAuth/login.hbs
@@ -37,12 +37,12 @@
               <div class="form-floating mb-3">
                 <input type="text" name="user_name" class="form-control rounded-pill" id="txtUsername"
                   placeholder="Username , phone or email example:name@example.com">
-                <label for="floatingInput">Tên đăng nhập, số điện thoại hoặc email</label>
+                <label for="txtUsername">Tên đăng nhập, số điện thoại hoặc email</label>
               </div>
               <div class="form-floating mb-3">
                 <input type="password" name="password" class="form-control rounded-pill" id="txtPassword"
                   placeholder="Password">
-                <label for="floatingPassword">Mật khẩu</label>
+                <label for="txtPassword">Mật khẩu</label>
               </div>
               <div class="form-check mb-2 d-flex mt-lg-1">
                 <input type="checkbox" class="form-check-input rounded-pill" id="exampleCheck1">
@@ -51,7 +51,7 @@
 
               <button class="btn btn-success rounded-pill w-100"
                 style="height: 55px; background-color: #5AAC44; font-size: larger;" type="button" onclick="login()">
-                Log in
+                Đăng nhập
               </button>
 
 
@@ -77,8 +77,6 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
   <script src="../public/javascripts/ajax/conferenceAjax.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <script>
     const login = _ => {
@@ -89,7 +87,7 @@
           password: $('#txtPassword').val(),
           mode: 1
         };
-        //c
+        
         $.ajax({
           url: 'http://localhost:3000/auth',
           method: 'POST',
@@ -98,10 +96,10 @@
           timeout: 10000
         }).done(data => {
           let { status, access_token, refresh_token, id, user_name, name, email } = data;
-          console.log('data: ', data);
+
 
           if (status === 1) {
-            console.log('data: ', data);
+         
             localStorage.setItem('x-access-token', access_token);
             localStorage.setItem('x-refresh-token', refresh_token);
             localStorage.setItem('id', id);
@@ -109,10 +107,6 @@
             localStorage.setItem('name', name);
             localStorage.setItem('email', email);
             location.href = './';
-
-
-
-
           }
           else {
             console.log('login failed');
