update css btn log out

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -112,7 +112,7 @@
             <hr class="dropdown-divider">
           </li>
           <li>
-            <button onclick="logOut()">
+            <button onclick="logOut()" style="border-style: none; background-color: white;">
               <i class="fa fa-sign-out" aria-hidden="true"></i>
               Đăng xuất
             </button>
